QP-1081: Fixed checkbox visibility on planogram product info

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -3732,14 +3732,14 @@ a.disabled {
   position: relative;
   display: inline-block;
   height: 135px;
-  padding-bottom: 35px;
+  padding-bottom: 30px;
   margin: 10px;
   border-radius: 2px;
   box-shadow: 0 2px 10px 0 #cec4c4;
   overflow: hidden;
 }
 .documentBody {
-  height: 100px;
+  height: 120px;
 }
 .documentBody img {
   height: 100%;
